# p5Compi

./: CMakeLists.txt  README.md
Prueba5_P5/: expr_ast.cpp  expr_ast.h
Prueba5_P5/tests/: CMakeLists.txt  test_ast.cpp
fa/: Numbers.jff  Operators.jff  Punctuation.jff  Start.jff  expr_lexer.fa2l
src/: Expr.h  ExprLexer.h  Parser.cpp  Parser.h  Tables.cpp  grammar_prueba.txt  lexer.cpp  main.cpp
tests/: test.txt  test1.txt
